feat: adopt Spring AI capabilities across chat rag and eval
Wire runtime provider/model switching, unified ChatClient with memory
advisors, JDBC chat persistence, main-chat tool calling, structured
output, VectorStore RAG advisor, observability logging, and optional
Anthropic provider (AI-103 through AI-110).

References:
- [Chat Memory - Spring AI Reference](https://docs.spring.io/spring-ai/reference/2.0/api/chat-memory.html)
- [Retrieval Augmented Generation - Spring AI Reference](https://docs.spring.io/spring-ai/reference/2.0/api/retrieval-augmented-generation.html)
- [Advisors API - Spring AI Reference](https://docs.spring.io/spring-ai/reference/2.0/api/advisors.html)
- [Structured Output - Spring AI Reference](https://docs.spring.io/spring-ai/reference/2.0/api/structured-output.html)

Co-authored-by: Cursor <cursoragent@cursor.com>